src/test/run-pass/fn-lval.rs



// -*- rust -*-
fn foo(f: extern fn(int) -> int) { }

fn id(x: int) -> int { ret x; }

fn main() { foo(id); }
